# ejecta-v8

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  findMemLeaks.js  proguard-rules.txt  settings.gradle
bgjslibrary/: AndroidManifest.xml  README.txt  build.gradle  proguard-rules.txt
bgjslibrary/jni/: Android.mk  Application.mk  CMakeLists.txt  submodules  test_unix.cpp  v8Canvas.cpp  v8JNI.cpp
bgjslibrary/jni/bgjs/: BGJSCanvasContext.cpp  BGJSCanvasContext.h  BGJSContext.cpp  BGJSContext.h  BGJSGLView.cpp  BGJSGLView.h  BGJSJavaWrapper.cpp  BGJSView.cpp  BGJSView.h  CMakeLists.txt  ClientAbstract.h  ClientAndroid.cpp  ClientAndroid.h  ClientOSX.cpp  ClientOSX.h  jniext.h
bgjslibrary/jni/bgjs/modules/: AjaxModule.cpp  BGJSGLModule.cpp  CMakeLists.txt
bgjslibrary/jni/ejecta/: EJConvert.cpp  EJConvert.h
bgjslibrary/jni/ejecta/EJCanvas/: CGCompat.cpp  EJCanvasContextScreen.cpp  EJCanvasContextScreen.h  EJCanvasTypes.h  EJFont.cpp  EJImageData.cpp  EJPath.cpp  EJTexture.cpp  GLcompat.h  NdkMisc.cpp  NdkMisc.h
bgjslibrary/jni/ejecta/EJCanvas/fonts/: roboto-medium-24.h  roboto_regular-15.h  roboto_regular-30.h  tahoma-15.h
bgjslibrary/jni/include/: mallocdebug.h
bgjslibrary/jni/utils/: mallocdebug.cpp
bgjslibrary/src/main/: AndroidManifest.xml
bgjslibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
include/: OWNERS  mallocdebug.h
include/utf8/: checked.h
sample/: build.gradle  proguard-rules.txt
sample/src/main/: AndroidManifest.xml
sample/src/main/assets/: demo.html
sample/src/main/assets/js/: biolab.js  cube.js  plasma.js
sample/src/main/res/layout/: activity_demo_detail.xml  activity_demo_list.xml  activity_demo_twopane.xml  fragment_demo_detail.xml  fragment_demo_webview.xml
sample/src/main/res/values/: strings.xml
sample/src/main/res/values-sw600dp/: refs.xml
src/main/: AndroidManifest.xml
src/main/assets/js/: android.js
src/main/cpp/: V8TestClass.cpp  V8TestClass.h  V8TestClass2.cpp  V8TestClass2.h
src/main/cpp/bgjs/: BGJSCanvasContext.cpp  BGJSCanvasContext.h  BGJSClass.cpp  BGJSClass.h  BGJSContext.cpp  BGJSContext.h  BGJSGLView.cpp  BGJSGLView.h  BGJSInfo.h  BGJSJavaWrapper.cpp  BGJSJavaWrapper.h  BGJSModule.cpp  BGJSModule.h  BGJSV8Engine.cpp  BGJSV8Engine.h  BGJSView.cpp  BGJSView.h  ClientAbstract.h  ClientAndroid.cpp  ClientAndroid.h  jniext.h  os-android.h  os-unix.h
src/main/cpp/bgjs/modules/: AjaxModule.cpp  AjaxModule.h  BGJSGLModule.cpp  BGJSGLModule.h
src/main/cpp/ejecta/: EJConvert.cpp  EJConvert.h  EJConvertColorRGBA.cpp  EJConvertColorRGBA.h
src/main/cpp/ejecta/EJCanvas/: CGCompat.h  EJCanvasContext.cpp  EJCanvasContext.h  EJCanvasContextScreen.cpp  EJFont.cpp  EJFont.h  EJPath.cpp  EJPath.h  EJTexture.cpp  EJTexture.h
src/main/cpp/ejecta/EJCanvas/fonts/: basier-medium-24.h  basier-medium-30.h  basier-medium-40.h  roboto-medium-24.h  roboto-medium-30.h  roboto-medium-40.h
src/main/cpp/jni/: JNIBase.cpp  JNIBase.h  JNIClass.cpp  JNIClass.h  JNIClassInfo.cpp  JNIClassInfo.h  JNIObject.cpp  JNIObject.h  JNIRef.h  JNIScope.h  JNIWrapper.cpp  JNIWrapper.h  jni.h  jni_assert.h
src/main/cpp/utils/: mallocdebug.cpp
src/main/cpp/v8/: JNIV8Array.cpp  JNIV8Array.h  JNIV8ArrayBuffer.cpp  JNIV8ArrayBuffer.h  JNIV8BridgedObject.cpp  JNIV8BridgedObject.h  JNIV8ClassInfo.cpp  JNIV8ClassInfo.h  JNIV8Function.cpp  JNIV8Function.h  JNIV8GenericObject.cpp  JNIV8GenericObject.h  JNIV8Marshalling.cpp  JNIV8Marshalling.h  JNIV8Object.cpp  JNIV8Object.h  JNIV8Promise.cpp  JNIV8Promise.h  JNIV8Symbol.cpp  JNIV8Symbol.h  JNIV8TypedArray.cpp  JNIV8TypedArray.h  JNIV8Wrapper.cpp  JNIV8Wrapper.h  V8ClassInfo.cpp  V8ClassInfo.h  V8Object.cpp  V8Object.h  v8.h
src/main/java/ag/boersego/bgjs/: BGJSGLView.kt  ClientAndroid.java  IV8GLViewOnRender.java  JNIObject.java  JNIObjectFinalizerRunnable.java  JNIObjectReference.java  JNIV8Array.java  JNIV8Array.kt  JNIV8ArrayBuffer.java  JNIV8Function.java  JNIV8Function.kt  JNIV8GenericObject.java  JNIV8Iterator.java  JNIV8Module.java  JNIV8Object.java  JNIV8Object.kt  JNIV8Promise.java  JNIV8Symbol.java  JNIV8TypedArray.java  JNIV8Undefined.java  JNIV8Value.java  V8BackedJavaClass.java  V8Engine.java  V8EngineExt.kt  V8Exception.java  V8JSException.java  V8Module.java  V8Object.java  V8PureJavaClass.java  V8TestClass.java  V8TestClass2.java  V8TestClassDerived.java  V8TextureView.java  V8Value.java
v8annotations/: build.gradle
v8annotations-compiler/: build.gradle
v8annotations-compiler/src/main/java/ag.boersego.v8annotations.compiler/: Util.java  V8AnnotationProcessor.java
v8annotations/src/main/java/ag.boersego.v8annotations/: V8Class.java  V8ClassCreationPolicy.java  V8Flags.java  V8Function.java  V8Getter.java  V8Setter.java  V8Symbols.java  V8UndefinedIsNull.java
(+34 files in other folders)
